# SoftEng2026

./: CMakeLists.txt
.github/workflows/: main.yml
src/: Circle.h  Cone.h  Cylinder.h  Ellipse.h  Ellipsoid.h  Hexagon.h  IShape.h  Pyramid.h  Rectangle.h  Rhombus.h  ShapeParam.h  ShapeParamIndex.h  ShapeResultData.h  Sphere.h  Torus.h  Trapeze.h  Triangle.h
src/tests/smoke/: ellipse_test.cpp  test_rectangle.cpp  test_shape1.cpp  test_trapeze.cpp
src/tests/unit/: test_ellipsoid.cpp
